--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,7 @@ h1, h2, h3, h4, h5, h6 {
   background-size: 90%;
   background-position: top right;
   background-repeat: no-repeat;
-  max-width: 887px;
+  max-width: 80%;
   margin: 0 auto;
 }
 
@@ -108,7 +108,7 @@ h1, h2, h3, h4, h5, h6 {
   background-size: 90%;
   background-position: top right;
   background-repeat: no-repeat;
-  max-width: 887px;
+  max-width: 80%;
   margin: 0 auto;
 }
 
@@ -118,7 +118,7 @@ h1, h2, h3, h4, h5, h6 {
   background-size: 90%;
   background-position: top right;
   background-repeat: no-repeat;
-  max-width: 887px;
+  max-width: 80%;
   margin: 0 auto;
 }
 
@@ -128,7 +128,7 @@ h1, h2, h3, h4, h5, h6 {
   background-size: 90%;
   background-position: top right;
   background-repeat: no-repeat;
-  max-width: 887px;
+  max-width: 80%;
   margin: 0 auto;
 }
 
@@ -138,7 +138,7 @@ h1, h2, h3, h4, h5, h6 {
   background-size: 90%;
   background-position: top right;
   background-repeat: no-repeat;
-  max-width: 887px;
+  max-width: 80%;
   margin: 0 auto;
 }
 
@@ -148,7 +148,7 @@ h1, h2, h3, h4, h5, h6 {
   background-size: 90%;
   background-position: top right;
   background-repeat: no-repeat;
-  max-width: 887px;
+  max-width: 80%;
   margin: 0 auto;
 }
 
@@ -158,7 +158,7 @@ h1, h2, h3, h4, h5, h6 {
   background-size: 90%;
   background-position: top right;
   background-repeat: no-repeat;
-  max-width: 887px;
+  max-width: 80%;
   margin: 0 auto;
 }
 
@@ -251,7 +251,7 @@ a.anchor {
 .wrapper { 
 	margin:auto;
 	padding:0%;
-  max-width: 1009px;
+  max-width: 90%;
   /* background: #ffffff; */
 }
 
