--- a/styles.css
+++ b/styles.css
@@ -205,6 +205,7 @@ color: #c99d4b;
 }
 
 h3{
+padding-top: 1em;
 padding-left: 1em;
 font-size: 1.3em;
 }
@@ -223,7 +224,7 @@ li {
 }
 
 .seminar_lists {
-  padding-left: 3.5em;
+  padding-left: 4em;
 }
 
 /* content styles */
@@ -266,7 +267,7 @@ a.anchor {
 }
 
 .wrapper p {
-  padding:1% 4%;
+  padding: 0.5% 4%;
   margin: 1%;
   margin-top: 0.25em;
   line-height: 1.5;
