--- a/styles.css
+++ b/styles.css
@@ -396,7 +396,21 @@ header {
   width: 80%;
 }
 
+::-webkit-scrollbar {
+    height: 12px;
+    width: 8px;
+    background: #d6d0d0;
+}
 
+::-webkit-scrollbar-thumb {
+    background: #981e32;
+    -webkit-border-radius: 1ex;
+    -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.75);
+}
+
+::-webkit-scrollbar-corner {
+    background: #000;
+}
 
 
 /* ---------------------------------------------------------------------------------------
