Minor changes to nav bars
This should be the last changes to the nav stuff

--- a/styles.css
+++ b/styles.css
@@ -73,6 +73,7 @@ body {
   margin-top:-25px;
   line-height: 1.4;
   letter-spacing: .015em;
+  scroll-behavior: smooth;
 }
 
 body > *:first-child {
